Move sass to a dev dependency

--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
 		"array",
 		"slice"
 	],
-	"dependencies": {
-		"sass": "^1.23.0"
-	},
 	"devDependencies": {
 		"jest": "^25.1.0",
+		"sass": "^1.23.0",
 		"sass-true": "^5.0.0"
 	},
 	"main": "./index.sass",
