--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,5 @@
 # User-specific files
+*.editorconfig
 *.user
 *.vs
 
@@ -13,3 +14,7 @@ npm-debug.log
 *.cache
 *.tgz
 .jest
+
+# Source Code
+build
+test
