--- a/.npmignore
+++ b/.npmignore
@@ -10,11 +10,10 @@ npm-debug.log
 # Build Artifacts
 *.lock.json
 *-lock.json
-*.build
+*.backup
 *.cache
 *.tgz
 .jest
 
 # Source Code
-build
 test
