--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/roydukkey/sass-module-list.git"
+		"url": "https://github.com/roydukkey/sass-module-list.git"
 	},
 	"homepage": "https://github.com/roydukkey/sass-module-list#readme",
 	"bugs": {
