Remove yarn.lock from workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.exclude": {
 		"**/node_modules": true,
 		".jest": true,
-		"package-lock.json": true
+		"package-lock.json": true,
+		"yarn.lock": true
 	}
 }
