--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 	"devDependencies": {
 		"clean-package": "^1.0.1",
 		"cspell": "^5.4.1",
+		"fs-extra": "^10.0.0",
 		"jest": "^26.6.3",
+		"replace-in-file": "^6.2.0",
 		"sass": "^1.34.0",
 		"sass-true": "^6.0.1",
 		"yarpm": "^1.1.1"
